Bug 438167 - Hitting enter when writing notes for laps
Summary: Hitting enter when writing notes for laps
Status: RESOLVED FIXED
Alias: None
Product: kronometer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.2.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-06 16:13 UTC by Alex Seif
Modified: 2022-10-07 17:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Seif 2021-06-06 16:13:09 UTC
SUMMARY
When writing a note for a lap, I hit enter to finish my note, but instead it creates a new lap.

STEPS TO REPRODUCE
1. Start 
2. Lap
3. Write note
4. Hit enter

OBSERVED RESULT
Note is saved but a new lap is recorded

EXPECTED RESULT
Note is save and no new lap is recoreded

SOFTWARE/OS VERSIONS
Linux/KDE Plasma
(available in About System)
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8
Comment 1 Bug Janitor Service 2022-09-25 20:44:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kronometer/-/merge_requests/13
Comment 2 Elvis Angelaccio 2022-10-07 17:18:23 UTC
Git commit aa17b213e82e8d50a78b3e6157363080ecac23ac by Elvis Angelaccio, on behalf of Johnny Jazeix.
Committed on 07/10/2022 at 17:15.
Pushed by elvisangelaccio into branch 'master'.

Fix Enter creating a new line when editing a note

M  +1    -0    src/gui/CMakeLists.txt
A  +30   -0    src/gui/lapitemdelegate.cpp     [License: GPL(v2.0+)]
A  +33   -0    src/gui/lapitemdelegate.h     [License: GPL(v2.0+)]
M  +13   -1    src/gui/mainwindow.cpp
M  +2    -0    src/gui/mainwindow.h

https://invent.kde.org/utilities/kronometer/commit/aa17b213e82e8d50a78b3e6157363080ecac23ac
Comment 3 Elvis Angelaccio 2022-10-07 17:19:27 UTC
Git commit 7641dd8c56121de2473435a96c0e84aa904bb537 by Elvis Angelaccio, on behalf of Johnny Jazeix.
Committed on 07/10/2022 at 17:19.
Pushed by elvisangelaccio into branch 'cherry-pick-aa17b213'.

Fix Enter creating a new line when editing a note


(cherry picked from commit aa17b213e82e8d50a78b3e6157363080ecac23ac)

M  +1    -0    src/gui/CMakeLists.txt
A  +30   -0    src/gui/lapitemdelegate.cpp     [License: GPL(v2.0+)]
A  +33   -0    src/gui/lapitemdelegate.h     [License: GPL(v2.0+)]
M  +13   -1    src/gui/mainwindow.cpp
M  +2    -0    src/gui/mainwindow.h

https://invent.kde.org/utilities/kronometer/commit/7641dd8c56121de2473435a96c0e84aa904bb537
Comment 4 Elvis Angelaccio 2022-10-07 17:25:57 UTC
Git commit fd1721b79cd06663f4ac89c730d53ea6658d0d55 by Elvis Angelaccio.
Committed on 07/10/2022 at 17:25.
Pushed by elvisangelaccio into branch '2.3'.

Fix Enter creating a new line when editing a note
FIXED-IN: 2.3.0

(cherry picked from commit aa17b213e82e8d50a78b3e6157363080ecac23ac)

M  +1    -0    src/gui/CMakeLists.txt
A  +30   -0    src/gui/lapitemdelegate.cpp     [License: GPL(v2.0+)]
A  +33   -0    src/gui/lapitemdelegate.h     [License: GPL(v2.0+)]
M  +13   -1    src/gui/mainwindow.cpp
M  +2    -0    src/gui/mainwindow.h

https://invent.kde.org/utilities/kronometer/commit/fd1721b79cd06663f4ac89c730d53ea6658d0d55