Fix Enter creating a new line when editing a note

BUG: 438167
FIXED-IN: 2.3.0

(cherry picked from commit aa17b213e82e8d50a78b3e6157363080ecac23ac)